IRtest_out/80_chaos_token.err
irs/80_chaos_token.ll:44:51: error: '@__HELLO45' defined with type '<{ i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, [72 x i32] }>*' but expected '[100 x i32]*'
  %v176 = getelementptr [100 x i32], [100 x i32]* @__HELLO45, i32 0, i32 0
                                                  ^
1 error generated.
